--- a/templates/chat/meus-chats.html
+++ b/templates/chat/meus-chats.html
@@ -14,7 +14,7 @@
                 <li class="list-group-item">
                     <div class="row">
                         <div class="col-7">
-                            <a href="{% url 'room' chat.codigoSala user.id %}">  {{ chat.nomeSala }} </a>
+                            <a href="{% url 'room' chat.codigoSala %}">  {{ chat.nomeSala }} </a>
                         </div>
 
                     </div>
