iniciando o alugar produto

--- a/templates/products/alugar.html
+++ b/templates/products/alugar.html
@@ -27,7 +27,7 @@
     <div class="bg-white p-5 col-12 col-lg-7 mb-5"
          style="border-radius: 20px; color: rgb(74, 74, 74); font-weight: bold;">
         <p> CPF </p>
-        <input type="text" required  id="id_cpf" value="" name="id_cpf">
+        <input type="text" required  id="id_cpf" value="{{ cpf }}" name="id_cpf">
 
         <p> Endereço </p>
 
