Salvando as informações do perfil no aluguel

--- a/templates/products/alugar.html
+++ b/templates/products/alugar.html
@@ -35,19 +35,19 @@
         <input type="text" required  id="id_cep" value="{{ cep }}" name="id_cep" />
 
         <p> Cidade </p>
-        <input type="text" required  id="cidade_input" value="{{ cidade }}" name="cidade_input" />
+        <input type="text" required  id="id_cidade" value="{{ cidade }}" name="id_cidade" />
 
         <p> Estado </p>
-        <input type="text" required  id="estado_input" value="{{ estado }}" name="estado_input" />
+        <input type="text" required  id="id_estado" value="{{ estado }}" name="id_estado" />
 
         <p> Rua </p>
-        <input type="text" required  id="rua_input" value="{{ rua }}" name="rua_input" />
+        <input type="text" required  id="id_rua" value="{{ rua }}" name="id_rua" />
 
         <p> Bairro </p>
-        <input type="text" required  id="bairro_input" value="{{ bairro }}" name="bairro_input" />
+        <input type="text" required  id="id_bairro" value="{{ bairro }}" name="id_bairro" />
 
         <p> Complemento </p>
-        <input type="text" required  id="complemento_input" value="{{ complemento }}"   name="complemento_input" />
+        <input type="text" id="id_complemento" value="{{ complemento }}"   name="id_complemento" />
          <div class="mt-4">
 
             <button type="submit" id="btnSalvar" class="btn btn-secondary"> Alugar </button>
