tela detalhar aluguel

--- a/templates/products/produtosRequisitados.html
+++ b/templates/products/produtosRequisitados.html
@@ -8,16 +8,16 @@
        {% for alugado in alugados %}
             {% if alugado.confirmado %}
         <div class="col">
-               <a href=""> <p> {{ alugado.produto.nome }} </p> </a>
-               <a href="">
+               <a href="{% url 'detalhar_aluguel' alugado.id %}"> <p> {{ alugado.produto.nome }} </p> </a>
+               <a href="{% url 'detalhar_aluguel' alugado.id %}">
                     <image src="{{ alugado.produto.get_photo_url }}" width="150" height="100" />
                </a>
                <a class="btn btn-secondary" href="" > Encerrar Aluguel </a>
         </div>
             {% else %}
         <div class="col">
-                <a href=""> <p> {{ alugado.produto.nome }} </p> </a>
-                <a href="">
+                <a href="{% url 'detalhar_aluguel' alugado.id %}"> <p> {{ alugado.produto.nome }} </p> </a>
+                <a href="{% url 'detalhar_aluguel' alugado.id %}">
                     <image src="{{ alugado.produto.get_photo_url }}" width="150" height="100" />
                 </a>
                 <a class="btn btn-secondary" href=""> Confirmar Aluguel </a>
