--- a/templates/notifications/notifications.html
+++ b/templates/notifications/notifications.html
@@ -33,6 +33,19 @@
 
 {% endif %}
 
+{% if notification.notification_type == 3 %}          
+    <a href="{% url 'produtos_requisitados' %}" class="nav-link">Sua proposta de aluguel foi aceita!</a>        
+            
+            <a href="{% url 'delete_notification' notification.id %}" class="delete">Marcar Como lido</a>   
+            <br><br>
+{% endif %}
+
+{% if notification.notification_type == 4 %}          
+    <a href="{% url 'produtos_requisitados' %}" class="nav-link">Avalie a sua experiencia com a negociação</a>        
+            
+            <a href="{% url 'delete_notification' notification.id %}" class="delete">Marcar Como lido</a>   
+            <br><br>
+{% endif %}
 
             
         {% endif %}
