Correção do excluir produto

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,8 @@
 </head>
 
 <body>
+
+<script type="text/javascript" src="{% static 'js/cidades-estados.js' %}"></script>
   <nav class="navbar fixed-top navbar-expand-lg bg-dark fixed-top box-shadow py-2">
     <div class="container nav-alugo">
       <a class="navbar-brand aumentar-tamanho-mouse" href="{% url 'home' %}">
@@ -131,6 +133,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
   </script>
+  <script type="text/javascript" src="{% static 'js/cidades-estados.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/jquery-1.2.6.pack.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/jquery.maskedinput-1.1.4.pack.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/scripts.js' %}"></script>
