--- a/templates/products/my-products-detail.html
+++ b/templates/products/my-products-detail.html
@@ -52,7 +52,7 @@
           <div class="modal-body">
             Deseja mesmo excluir o produto?
           </div>
-          <div class="modal-footer">
+          <div id="teste" class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal"> Fechar </button>
             <a class="btn btn-secondary" href="{% url 'delete_product' product.id %}"> Sim </a>
           </div>
