--- a/templates/products/my-products.html
+++ b/templates/products/my-products.html
@@ -79,7 +79,7 @@
                                         </a>
                                     </div>
                                     <div class="6">
-                                        <button type="button" data-toggle="modal" data-target="#modal-exlusao"
+                                        <button type="button" onclick="prenecherExclusao({{product.id}})" data-toggle="modal" data-target="#modal-exlusao"
                                             class="btn btn-primary btn-block botao-redondo">
                                             <i class="fa fa-trash" aria-hidden="true"></i>
                                         </button>
@@ -160,9 +160,25 @@
 
 </section>
 
-
-
-
-
+<!-- Modal -->
+    <div class="modal fade" id="modal-exlusao" tabindex="-1" role="dialog" aria-labelledby="modal-exclusão" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" >Exclusão</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            Deseja mesmo excluir o produto?
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal"> Fechar </button>
+            <a class="btn btn-secondary" href="{% url 'delete_product' '0' %}"> Sim </a>
+          </div>
+        </div>
+      </div>
+    </div>
 
 {% endblock %}
