--- a/templates/products/products-form.html
+++ b/templates/products/products-form.html
@@ -21,8 +21,10 @@
                     {% csrf_token %}
                     {{ form|bootstrap }}
 
-
+            <select required class="custom-select" id="estado"></select>
+            <select required class="custom-select" id="cidade"></select>
             </div>
+
 
             <div class="row mt-5">
                 <div class="col-lg-6">
@@ -34,8 +36,8 @@
                 <div class="col-lg-3 text-center">
                     <button type="submit"
                         class="btn btn-primary px-5 btn-block mt-3 mt-lg-0 btn-lg botao-redondo">Anunciar</button>
-                    </form>
                 </div>
+                </form>
             </div>
 
         </div>
@@ -57,6 +59,13 @@
         document.getElementById("id_categoria").style.marginBottom = "-20px";
         document.getElementById("id_preco").style.marginBottom = "-20px";
         document.getElementById("id_condicoesUso").style.marginBottom = "-20px";
+    </script>
+
+    <script language="JavaScript" type="text/javascript" charset="utf-8">
+      new dgCidadesEstados({
+        cidade: document.getElementById('cidade'),
+        estado: document.getElementById('estado')
+      })
     </script>
 
 
