--- a/templates/base_rodape_fixo.html
+++ b/templates/base_rodape_fixo.html
@@ -92,33 +92,8 @@
 
   {% block main %}
   {% endblock %}
-
-
-
-  <br />
-  <br />
-  <br />
-  <br />
-  <br />
-  <br />
-  <br />
-  <br />
-  <br />
-
-
-  <br />
-  <br />
-  <br />
-  <br />
-  <br />
-  <br />
-  <br />
-  <br />
-  <br />
-
-
   
-  <footer class="navbar navbar-expand-sm navbar-dark bg-dark justify-content-center mt-5">
+  <footer class="navbar navbar-expand-sm navbar-dark bg-dark justify-content-center mt-5 fixed-bottom">
     <a class="navbar-brand" href="{% url 'home' %}">Alugo</a>
   </footer>
 
