--- a/templates/products/products-form.html
+++ b/templates/products/products-form.html
@@ -21,7 +21,7 @@
                     {% csrf_token %}
                     {{ form|bootstrap }}
 
-            <select required class="custom-select" id="estado"></select>
+            <select required class="custom-select mt-2 mb-4" id="estado"></select>
             <select required class="custom-select" id="cidade"></select>
             </div>
 
