--- a/templates/products/products-detail.html
+++ b/templates/products/products-detail.html
@@ -1,44 +1,138 @@
 {%  extends 'base.html'%}
+{% load static %}
 
 {% block title %} Lista de Produtos {% endblock %}
 
 {% block main %}
 
+<section class="container">
 
-  
-<br>
-<br>
+	<div class="row">
+		<div class="col">
+			<span class="h6" href="">Pernambuco</span>
+			<img src="{% static 'images/icone-seta-direita.ico' %}" class="mx-2"
+				style="width: 10px; height: 15px; margin-top: -3px;" alt="icone seta direita">
+			<span class="h6" href="">Grande Recife</span>
+			<img src="{% static 'images/icone-seta-direita.ico' %}" class="mx-2"
+				style="width: 10px; height: 15px; margin-top: -3px;" alt="icone seta direita">
+			<span class="h6" href="">{{ product.categoria }}</span>
+		</div>
+	</div>
 
-<div>
-	{% if is_favourite %}
-	<a href="{% url 'favourite_products' id=product.id %}">
-		<i class="fas fa-heart fa-lg"></i>
-	</a>
-	{% else %}
-	<a href="{% url 'favourite_products' id=product.id %}">
-		<i class="far fa-heart fa-lg"></i>
-	</a>
-	{% endif %}
+	<div class="mt-5">
+		<h3>{{ product.nome }}</h3>
+	</div>
 
-</div>
+	<div class="row justify-content-between col-lg-9 col-12">
+
+		<div class="mt-2 text-secondary">
+			<h7>Publicado em 29/04/2020 às 17:09</h7>
+		</div>
+
+		<div class="d-flex align-items-center">
+			<div class="">
+				{% if is_favourite %}
+				<a href="{% url 'favourite_products' id=product.id %}">
+					<i class="fas fa-heart fa-2x"></i>
+				</a>
+				{% else %}
+				<a href="{% url 'favourite_products' id=product.id %}">
+					<i class="fas fa-heart fa-2x"></i>
+				</a>
+				{% endif %}
+			</div>
+		</div>
+
+	</div>
+
+	<div class="row mt-3 mb-4">
+
+		<div class="col-lg-9 col-12">
+
+			<div class="">
+				<image src="{{ product.get_photo_url }}" class="rounded w-100 imagem-xl imagem-lg imagem-md"></image>
+			</div>
+
+		</div>
+
+		<div class="col-lg-3 col-12 mt-lg-0 mt-4">
+
+			<div class="text-center p-3 bg-light mb-lg-3" style="border: 2px solid #ccc; border-radius: 20px;">
+
+				<div class="mb-3">
+					<h3>Paulo Marcio</h3>
+				</div>
+
+				<div class="mb-3">
+					<a type="button" class="btn btn-primary botao-redondo px-5" href="{% url 'criarSala'  idProduto=product.id %}">
+						Chamar no chat
+					</a>
+				</div>
+
+			</div>
+
+			<div class="text-center p-3 d-none d-xl-block">
+
+				<div class="etiqueta-valor d-none d-xl-block">
+					<span class="h2 preco">R$ {{ product.preco }}</span>
+				</div>
+			</div>
+
+		</div>
+
+	</div>
+
+	<div class="row mt-4 mb-5">
+
+		<div class="col-lg-4 col-12 d-xl-none d-block mb-4">
+			<div class="etiqueta-valor-md" style="margin:0 auto;">
+				<span class="h2 preco-md">R$ {{ product.preco }}</span>
+			</div>
+		</div>
+
+		<div class="col-12 col-lg-9 mt-xl-5 mt-1 text-center" style="color: rgb(74, 74, 74); font-weight: bold;">
+			<h5>{{ product.descricao }} </h5>
+		</div>
+
+		<div class="col-12 mt-5 mb-3">
+			<h5>Condições de Uso:</h5>
+			<div style="color: rgb(74, 74, 74); font-weight: bold;">
+				<h5 class="mt-3 ml-2">{{ product.condicoesUso }}</h5>
+			</div>
+		</div>
+
+	</div>
 
 
-<h3> {{ product.nome }} </h3>
 
-<image src="{{ product.get_photo_url }}" width="150" height="100"></image>
+	<div class="row col-lg-9 col-12 mt-5">
 
-<p> Descrição : {{ product.descricao }} </p>
+		<div class="col-12 mt-4 mb-3">
+			<h5>Localização</h5>
+		</div>
 
-<p> Categoria:  {{ product.categoria }} </p>
+		<div class="col-6" style="color: #A9A9A9">
+			<span>Estado</span>
+		</div>
 
-<p> Preço: {{ product.preco }} R$ </p>
+		<div class="col-6" style="color: #A9A9A9">
+			<span>Município</span>
+		</div>
 
-<p> Condições de Uso : {{ product.condicoesUso }} </p>
+		<div class="col-6">
+			<span>Pernambuco</span>
+		</div>
 
-   <a type="button"class="btn btn-secondary"
-	  href="{% url 'criarSala'  idProduto=product.id %}">
-	   Chat
-    </a>
-    
+		<div class="col-6">
+			<span>Recife</span>
+		</div>
+
+
+	</div>
+
+
+</section>
+
+
 
 {% endblock %}
