Inserido a localidade no produto

--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
             </div>
           <li class="nav-item aumentar-tamanho-mouse">
             <a id="anunciar" class="btn text-white ml-md-2 px-3 botao-redondo" style="background-color: orange;"
-              href="{% url 'create_products' user.id %}">Anunciar</a>
+              href="{% url 'create_products' %}">Anunciar</a>
           </li>
           {% else %}
           <li class="nav-item">
