--- a/templates/products/products-alter-form.html
+++ b/templates/products/products-alter-form.html
@@ -2,12 +2,20 @@
 
 {%  load bootstrap %}
 
-{% block title %} Seja bem vindo {% endblock %}
+{% block title %} Alterar Anúncio {% endblock %}
 
 {% block main %}
-   <body>
-   <h3> Produto </h3>
 
+    <body>
+
+    <section class="container-fluid box-shadow pb-5" style="border-top: 1px solid #ccc">
+        <div class="container mt-3">
+
+            <div class="row d-flex justify-content-center text-center mb-3">
+                <h1 class="display-4 text-primary">Alterar Anúncio</h1>
+            </div>
+
+            <div class="row p-lg-5 py-4 px-1 rounded mb-5 texto-campo" style="border: 1px solid #ccc">
    <div>
         {% for message in messages %}
                <div class="alert alert-success alert-dismissible fade show" role="alert">
@@ -26,10 +34,40 @@
         <select required class="custom-select mt-2 mb-4" name="estado" id="estado"></select>
         <select required class="custom-select" name="cidade" id="cidade"></select>
 
-        <button type="submit" class="btn btn-secondary"> Salvar </button>
-        <a href="{% url 'list_products' user.id %}" class="btn btn-secondary"> Voltar </a>
+    <div class="row mt-5">
+                <div class="col-lg-6">
+                    <span>Ao publicar você concorda e aceita nossos <a href="#">Termos de Uso e
+                            Privacidade</a></span>
+                </div>
+                <div class="col-3">
+                </div>
+                <div class="col-lg-3 text-center">
+                    <button type="submit"
+                        class="btn btn-primary px-5 btn-block mt-3 mt-lg-0 btn-lg botao-redondo">Alterar</button>
+                </div>
+                </form>
+            </div>
 
-    </form>
+        </div>
+    </section>
+
+
+
+    <script type="text/javascript">
+        document.getElementById("id_nome").placeholder = 'Título*';
+        document.getElementById("id_descricao").placeholder = 'Descrição*';
+        document.getElementById("id_preco").placeholder = 'Preço*';
+        document.getElementById("id_condicoesUso").placeholder = 'Condições de Uso*';
+        document.getElementById("id_categoria").classList.add("col-md-4");
+        document.getElementById("id_preco").classList.add("col-md-3");
+
+        /* Diminuir espaçamento entre campos */
+        document.getElementById("id_nome").style.marginBottom = "-8px";
+        document.getElementById("id_descricao").style.marginBottom = "-20px";
+        document.getElementById("id_categoria").style.marginBottom = "-20px";
+        document.getElementById("id_preco").style.marginBottom = "-20px";
+        document.getElementById("id_condicoesUso").style.marginBottom = "-20px";
+    </script>
 
    <script language="JavaScript" type="text/javascript" charset="utf-8">
       new dgCidadesEstados({
